2007-02-19  Soren Sandmann <sandmann@redhat.com>

	* autogen.sh: Copy this from somewhere else since that makes it
	work on my system.

2006-12-15  Pema Geyleg  <pgeyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS

2006-11-19  Soren Sandmann <sandmann@redhat.com>

	* configure.in: Remove popt dependency, bump gtk+
	requirement to 2.6

	* main.c: Port to GOption

2006-11-19  Soren Sandmann <sandmann@redhat.com>

	* autogen.sh, Makefile.am, configure.in, leakdetect.c, main.c,
	* memprof.glade, process.c, server.c, tree.c: 
	Remove dependency on libgnome and libgnomeui. 
	Improve default window size
	Break option parsing.

2006-11-18  Soren Sandmann <sandmann@redhat.com>

	* main.c, memprof.glade: Replace GnomeCanvas with GtkDrawingArea

Mon Aug  7 19:03:38 2006  Søren Sandmann  <sandmann@redhat.com>

	* NEWS: Updates

	* configure.in: Set version number to 0.6

	* main.c (about_cb): Set "name" to PACKAGE_NAME

2006-07-26  Michael Meeks  <michael.meeks@novell.com>

	* merge sled-fixes.

	* main.c, treeviewutils.c: fix auto-elipsizing,
	and column sizing evilness - particularly useful for
	C++ with -huge- symbol names.

2006-07-26  Michael Meeks  <michael.meeks@novell.com>

	* stack-frame.c (mi_call_with_backtrace): add
	guard to avoid rtld related deadlock from allocation
	from inside 'backtrace' itself.

	* process.c (input_func): blank info before read,
	add assertions,

	* memprof.glade: add record button.

	* main.c: fix treeview selection crashers.
	(record_button_toggled_cb): add record button so
	you can stop recording events and read the profile.
	(string_view_init): set column renderer to be
	ellipsizing and resizeable.

	* bfdutils.c (process_map_sections): assume we
	have a modern libbfd - with bfd_section_size by
	default.

	* autogen.sh: require automake 1.8 to play nicely
	on modern systems.

	* intercept.c (mi_write_stack): if n_frames is
	negative (uh-huh) then drop the stack rather than
	breaking the protocol. Add protocol mi_debug.
