@@ -6,7 +6,7 @@ DIE=0
 
 (autoconf --version) < /dev/null > /dev/null 2>&1 || {
   echo
-  echo "**Error**: You must have \`autoconf' installed to compile GtkEditor."
+  echo "**Error**: You must have \`autoconf' installed to compile memprof."
   echo "Download the appropriate package for your distribution,"
   echo "or get the source tarball at ftp://ftp.gnu.org/pub/gnu/"
   DIE=1
@@ -15,7 +15,7 @@ DIE=0
 (grep "^AM_PROG_LIBTOOL" $srcdir/configure.in >/dev/null) && {
   (libtool --version) < /dev/null > /dev/null 2>&1 || {
     echo
-    echo "**Error**: You must have \`libtool' installed to compile GtkEditor."
+    echo "**Error**: You must have \`libtool' installed to compile memprof."
     echo "Get ftp://ftp.gnu.org/pub/gnu/libtool-1.2.tar.gz"
     echo "(or a newer version if it is available)"
     DIE=1
@@ -26,7 +26,7 @@ grep "^AM_GNU_GETTEXT" $srcdir/configure.in >/dev/null && {
   grep "sed.*POTFILES" $srcdir/configure.in >/dev/null || \
   (gettext --version) < /dev/null > /dev/null 2>&1 || {
     echo
-    echo "**Error**: You must have \`gettext' installed to compile GtkEditor."
+    echo "**Error**: You must have \`gettext' installed to compile memprof."
     echo "Get ftp://alpha.gnu.org/gnu/gettext-0.10.35.tar.gz"
     echo "(or a newer version if it is available)"
     DIE=1
@@ -35,7 +35,7 @@ grep "^AM_GNU_GETTEXT" $srcdir/configure.in >/dev/null && {
 
 (automake --version) < /dev/null > /dev/null 2>&1 || {
   echo
-  echo "**Error**: You must have \`automake' installed to compile GtkEditor."
+  echo "**Error**: You must have \`automake' installed to compile memprof."
   echo "Get ftp://ftp.gnu.org/pub/gnu/automake-1.3.tar.gz"
   echo "(or a newer version if it is available)"
   DIE=1
@@ -109,6 +109,10 @@ do
       if grep "^AM_PROG_LIBTOOL" configure.in >/dev/null; then
 	echo "Running libtoolize..."
 	libtoolize --force --copy
+      fi
+      if grep "^AC_PROG_INTLTOOL" configure.in > /dev/null; then
+        echo "running intltoolize..."
+        intltoolize
       fi
       echo "Running aclocal $aclocalinclude ..."
       aclocal $aclocalinclude
